fix(text): decrease text colors for better visibility

--- a/src/scss/variables/_text.scss
+++ b/src/scss/variables/_text.scss
@@ -79,35 +79,40 @@ $text-settings: (
         all: (
             font-settings: bold,
             font-size: ms(5),
-            line-height: 1.25
+            line-height: 1.25,
+            color: $color-primary,
         )
     ),
     headline-h2: (
         all: (
             font-settings: bold,
             font-size: ms(4),
-            line-height: 1.25
+            line-height: 1.25,
+            color: $color-primary,
         )
     ),
     headline-h3: (
         all: (
             font-settings: bold,
             font-size: ms(3),
-            line-height: 1.5
+            line-height: 1.5,
+            color: $color-primary,
         )
     ),
     headline-h4: (
         all: (
             font-settings: bold,
             font-size: ms(2),
-            line-height: 1.5
+            line-height: 1.5,
+            color: $color-primary,
         )
     ),
     headline-h5: (
         all: (
             font-settings: bold,
             font-size: ms(1),
-            line-height: 1.6
+            line-height: 1.6,
+            color: $color-primary,
         )
     ),
     headline-h6: (
@@ -115,6 +120,7 @@ $text-settings: (
             font-settings: bold,
             font-size: ms(0),
             line-height: 2,
+            color: $color-primary,
             text-transform: uppercase
         )
     ),
@@ -122,14 +128,16 @@ $text-settings: (
         all: (
             font-settings: regular,
             font-size: ms(0),
-            line-height: 1.5
+            line-height: 1.6,
+            color: rgba($color-primary, .6)
         )
     ),
     copy-bold: (
         all: (
             font-settings: bold,
             font-size: ms(0),
-            line-height: 1.5
+            line-height: 1.6,
+            color: rgba($color-primary, .8)
         )
     ),
     code: (
